Tue Apr 12 10:37:39 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h: VC doesn't have ftruncate() and others, but
	  ruby needs HAVE_ macros to use our emulation functions.
	  (fix the problem of 31262)

Tue Apr 12 01:33:00 2011  Luis Lavena  <luislavena@gmail.com>

	* configure.in: properly evaluate existence of truncate, ftruncate
	  and ftello for MinGW. [ruby-core:35678]
	* win32/win32.c: rename truncate, ftruncate and ftello to avoid 
	  redefinitions.
	* win32/win32.h: ditto.

Fri Apr  8 16:01:56 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/stringio/stringio.c (strio_getline): check whether str is
	  a string when str and lim are given.
	  https://twitter.com/watson1978/status/56225052152168449

Wed Apr  6 15:12:40 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_pkey_dh.c (ossl_dh_initialize):
	  pop pushed error after each try of reading. fixes #4550

	* ext/openssl/ossl_pkey_dsa.c (ossl_dsa_initialize): ditto.

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_initialize): ditto.

Wed Apr  6 11:36:44 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_pkey_rsa.c (ossl_rsa_initialize):
	  pop pushed error after each try of reading. fixes #4550

Mon Apr  4 21:41:26 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_io_syswrite): While local FS writes are usually
	  buffered, the buffers can be full or the file opened with
	  O_SYNC. IO#syswrite can also be used on blocking IOs
	  (pipe/socket) just like IO#write.
	  The patch is written by Eric Wong. [ruby-core:35554]

Fri Mar 25 19:39:40 2011  Ben Walton <bwalton@artsci.utoronto.ca>

	* test/test_syslog.rb:
	  Skip syslog tests that rely on LOG_PERROR unless it's defined

	  Instead of checking looking at the platform to determine if the tests
	  relying on LOG_PERROR should be run, look for the definition of the
	  constant as this will be robust against all platforms as long as the
	  underlying syslog.c code sets it up correctly.
